Correct Palette - Improving Contrast

--- a/theme/colors/light.css
+++ b/theme/colors/light.css
@@ -13,9 +13,9 @@
 	--gnome-accent: #3583E4;
 
 	/* Toolbars */
-	--gnome-toolbar-background: #e0ddda;
+	--gnome-toolbar-background: #F8F7F7;
 	--gnome-toolbar-color: rgb(46, 52, 54);
-	--gnome-toolbar-border-color: #b6b6b3;
+	--gnome-toolbar-border-color: #D5D5D5;
 	--gnome-toolbar-icon-fill: #2e3436;
 	--gnome-inactive-toolbar-background: #f6f5f4;
 	--gnome-inactive-toolbar-color: #d5d0cc;
@@ -23,8 +23,8 @@
 	--gnome-inactive-toolbar-icon-fill: #929595;
 
 	/* Sidebar */
-	--gnome-sidebar-background: #fbfafa;
-	--gnome-inactive-sidebar-background: #f9f9f8;
+	--gnome-sidebar-background: #F8F7F7;
+	--gnome-inactive-sidebar-background: var(--gnome-sidebar-background);
 
 	/* Popups */
 	--gnome-menu-background: #ffffff;
@@ -36,39 +36,39 @@
 	--gnome-popover-separator-color: rgba(0, 0, 0, 0.1);
 
 	/* Header bar */
-	--gnome-headerbar-background: #F8F7F7;
-	--gnome-headerbar-border-color: none;
-	--gnome-headerbar-box-shadow: 0 -1px rgb(217, 217, 217) inset, 0 1px #fff inset;
-	--gnome-inactive-headerbar-background: linear-gradient(#f6f5f4, #f6f5f4);
+	--gnome-headerbar-background: #EBEBEB;
+	--gnome-headerbar-border-color: #D5D5D5;
+	--gnome-headerbar-box-shadow: none;
+	--gnome-inactive-headerbar-background: #F8F7F7;
 	--gnome-inactive-headerbar-border-color: #d5d0cc;
 	--gnome-inactive-headerbar-box-shadow: 0 1px #fff inset;
 
 	/* Buttons */
-	--gnome-button-background: #F8F7F7;
+	--gnome-button-background: #EBEBEB;
 	--gnome-button-border-color: none;
 	--gnome-button-border-accent-color: none;
 	--gnome-button-box-shadow: none;
-	--gnome-button-hover-background: #E6E6E6;
-	--gnome-button-active-background: linear-gradient(#cfcac4, #cfcac4);
+	--gnome-button-hover-background: #E5E2E1;
+	--gnome-button-active-background: #CDCDCD;
 	--gnome-button-active-border-color: none;
 	--gnome-button-active-border-accent-color: #bab3ab;
 	--gnome-button-active-box-shadow: 0 1px rgba(255, 255, 255, 0);
-	--gnome-button-disabled-background: #F8F7F7;
+	--gnome-button-disabled-background: var(--gnome-button-background);
 	--gnome-button-disabled-border-color: #cdc7c2;
 	--gnome-button-disabled-box-shadow: inset 0 1px rgba(255, 255, 255, 0);
-	--gnome-inactive-button-background: linear-gradient(#f6f5f4, #f6f5f4);
+	--gnome-inactive-button-background: #F8F7F7;
 	--gnome-inactive-button-border-color: none;
 	--gnome-inactive-button-box-shadow: 0 1px rgba(255, 255, 255, 0) inset, 0 1px rgba(255, 255, 255, 0);
 	--gnome-button-suggested-action-background: linear-gradient(to top, #2379e2 2px, #3584e4);
-	--gnome-button-suggested-action-border-color: #1b6acb;
+	--gnome-button-suggested-action-border-color: none;
 	--gnome-button-suggested-action-border-accent-color: #15539e;
 	--gnome-button-suggested-action-box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), 0 1px 2px rgba(0, 0, 0, 0.07);
 	--gnome-button-suggested-action-hover-background: linear-gradient(to top, #3584e4, #3987e5 1px);
 	--gnome-button-suggested-action-active-background: #1961b9;
 	--gnome-button-suggested-action-active-border-color: #1b6acb;
 	--gnome-button-suggested-action-active-box-shadow: inset 0 1px rgba(255, 255, 255, 0);
-	--gnome-button-destructive-action-background: linear-gradient(to top, #ce1921 2px, #e01b24);
-	--gnome-button-destructive-action-border-color: none;
+	--gnome-button-destructive-action-background: var(--gnome-button-background);
+	--gnome-button-destructive-action-border-color: #E5E2E1;
 	--gnome-button-destructive-action-border-accent-color: #851015;
 	--gnome-button-destructive-action-box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), 0 1px 2px rgba(0, 0, 0, 0.07);
 	--gnome-button-destructive-action-hover-background: linear-gradient(to top, #e01b24, #e41c26 1px);
@@ -77,14 +77,14 @@
 	--gnome-button-destructive-action-active-box-shadow: inset 0 1px rgba(255, 255, 255, 0);
 
 	/* Entries */
-	--gnome-entry-background: #E5E2E1;
+	--gnome-entry-background: #D8D8D8;
 	--gnome-entry-border-color: none;
 	--gnome-entry-box-shadow: none;
-	--gnome-entry-color: #020202;
-	--gnome-inactive-entry-background: linear-gradient(#fcfcfc, #fcfcfc);
-	--gnome-inactive-entry-border-color: #d5d0cc;
+	--gnome-entry-color: #303030;
+	--gnome-inactive-entry-background: var(--gnome-entry-background);
+	--gnome-inactive-entry-border-color: none;
 	--gnome-inactive-entry-box-shadow: none;
-	--gnome-inactive-entry-color: #323232;
+	--gnome-inactive-entry-color: #303030;
 	--gnome-focused-urlbar-border-color: var(--gnome-accent);
 	--gnome-focused-urlbar-item-hover: var(--gnome-toolbar-background);
 
@@ -97,22 +97,21 @@
 	--gnome-switch-active-background: var(--gnome-accent);
 	--gnome-switch-active-border-color: #185fb4;
 	--gnome-switch-active-slider-border-color: #185fb4;
-
   /* Tabs */
-	--gnome-tabbar-tab-color: #2e3436;
-	--gnome-tabbar-tab-background: #E5E2E1;
+	--gnome-tabbar-tab-color: #303030;
+	--gnome-tabbar-tab-background: #E1E1E1;
 	--gnome-tabbar-tab-border-color: #D5D5D5;
-	--gnome-tabbar-tab-hover-background: #E5E2E1;
-	--gnome-tabbar-tab-hover-color: #2e3436;
-	--gnome-tabbar-tab-active-background: #F8F7F7;
-	--gnome-tabbar-tab-active-background-contrast: #F8F7F7;
-	--gnome-tabbar-tab-active-color: #2e3436;
-	--gnome-tabbar-tab-active-hover-background: #E5E2E1;
-	--gnome-inactive-tabbar-tab-color: #929595;
-	--gnome-inactive-tabbar-tab-background: #F8F7F7;
-	--gnome-inactive-tabbar-tab-active-background: #E5E2E1;
+	--gnome-tabbar-tab-hover-background: #DCDCDC;
+	--gnome-tabbar-tab-hover-color: #303030;
+	--gnome-tabbar-tab-active-background: #EBEBEB;
+	--gnome-tabbar-tab-active-background-contrast: #EBEBEB;
+	--gnome-tabbar-tab-active-color: #303030;
+	--gnome-tabbar-tab-active-hover-background: #E1E1E1;
+	--gnome-inactive-tabbar-tab-color: #303030;
+	--gnome-inactive-tabbar-tab-background: #EFEFEF;
+	--gnome-inactive-tabbar-tab-active-background: #FAFAFA;
 	--gnome-inactive-tabbar-tab-active-color: var(--gnome-inactive-tabbar-tab-color);
-	--gnome-tabbar-close-hover: #d2d1d1;
+	--gnome-tabbar-close-hover: #D9D9D9;
 }
 
 /* Private window colors */
